fix overflow hidden thing

--- a/css/index.css
+++ b/css/index.css
@@ -19,7 +19,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 
